# bulma-web-template

./: .eslintrc.yml  README.md  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml
src/app/static/css/: main.sass
